Add Lightning Address Identifier
