# BTCPayServer.Plugins.LNbank/Data/API/EditWalletRequest.cs
@@ -3,4 +3,5 @@ namespace BTCPayServer.Plugins.LNbank.Data.API;
 public class EditWalletRequest
 {
     public string Name { get; set; }
+    public string LightningAddressIdentifier { get; set; }
 }
