# BTCPayServer.Plugins.LNbank/Services/Wallets/WalletsQuery.cs
@@ -8,6 +8,7 @@ public class WalletsQuery
     public string[] UserId { get; set; }
     public string[] WalletId { get; set; }
     public string[] AccessKey { get; set; }
+    public string[] LightningAddressIdentifier { get; set; }
     public bool IncludeTransactions { get; set; }
     public bool IncludeAccessKeys { get; set; }
     public bool IncludeUser { get; set; }
